--- a/coptic/westendorf/styles/styles.css
+++ b/coptic/westendorf/styles/styles.css
@@ -1,22 +1,11 @@
-@import url("../../../styles/fonts.css");
-
-body {
-	font-size: 16px;
-	color: gray;
-	background: #111;
-	font-family: sans-serif;
-	margin: 1em;
-	padding: 1em;
-	line-height: 1.5;
-	outline: 1px dotted lightgreen;
-}
-
-h1 {
-	text-align: center;
-}
+@import url("../../../styles/styles.css");
 
 h1 span {
 	font-size: .5em;
+}
+
+h1:has(span) {
+	text-align: center;
 }
 
 .dialect {
