--- a/styles/styles.css
+++ b/styles/styles.css
@@ -13,7 +13,7 @@ body {
 
 h1, h2, h3, h4, h5, h6 {
 	font-weight: normal;
-	text-transform: uppercase;
+	//text-transform: uppercase;
 	margin: 0;
 }
 
